--- a/index.html
+++ b/index.html
@@ -19,7 +19,30 @@
     <input type="text"><br><br>
     <lable for="age">Age (optional)</lable>
     <input for="text"><br><br>
-    
+    <label for="dropdowm">How often do you eat pizza?</label>
+    <select name="often">
+      <option value="daily">Daily</option>
+      <option value="weekly">Weekly</option>
+      <option value="monthly">Monthly</option>
+      <option value="yearly">Yearly</option>
+    </select><br><br>
+    <label for="pineapple">Would you eat pineapple on pizza?</label><br>
+    <label for="no">NO</label>
+    <input type="radio" value="no">
+    <label for="Yes">Yes</label>
+    <input type="radio" value="yes"><br><br>
+
+    <label for="question">How can pizza improve?</label><br><br>
+    <input type="checkbox" value="cheese">
+    <label for="cheese2">More Cheese</label><br><br>
+    <input type="checkbox" value="sauce">
+    <label for="sauce2">More sauce</label><br><br>
+    <input type="checkbox" for="crispy">
+    <label for="crispy">Crispier</label><br><br>
+    <input type="checkbox" for="thin">
+    <label for="thin">Thinner</label><br><br>
+    <input type="checkbox" for="thick">
+    <label for="thick">Thicker</label>
 
 
   </form>
