--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pizza Survey</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Merriweather:ital@0;1&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css"></link>
 </head>
 <body>
   <h1 id="title">The Very Important Pizza Survey</h1>
-  <h2>Thank you for taking the time to think about pizza</h2>
+  
   <p id="description">Please input your pizza opinions!</p>
 
   <form id="survey-form">
