--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   
   <p id="description">Please input your pizza opinions!</p>
 
+  <div id="form">
   <form id="survey-form">
     <br><br>
     <label for="name">Name</label>
@@ -53,6 +54,7 @@
     <label for="textinput">Any other strong pizza opinions?</label><br>
     <textarea id="texty" name="textinput" rows="4" cols="40"></textarea><br><br>
     <input type="submit" id="submit" name="submit"><br><br>
+  </div>
 
   </form>
 </body>
