--- a/index.html
+++ b/index.html
@@ -1,61 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pizza Survey</title>
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Merriweather:ital@0;1&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css"></link>
+	<meta charset="UTF-8">
+	<meta content="IE=edge" http-equiv="X-UA-Compatible">
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
+	<title>Pizza Survey</title>
+	<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Merriweather:ital@0;1&display=swap" rel="stylesheet">
+	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <h1 id="title">The Very Important Pizza Survey</h1>
-  
-  <p id="description">Please input your pizza opinions!</p>
-
-  <div id="form">
-  <form id="survey-form">
-    <br><br>
-    <label for="name">Name</label>
-    <input type="text" id="name" name="name"><br><br>
-
-    <label for="email">Email</label>
-    <input type="text" name="email"><br><br>
-
-    <lable for="age">Age (optional)</lable>
-    <input for="text" name="age"><br><br>
-
-    <label for="dropdowm">How often do you eat pizza?</label>
-    <select name="often">
-      <option value="daily">Daily</option>
-      <option value="weekly">Weekly</option>
-      <option value="monthly">Monthly</option>
-      <option value="yearly">Yearly</option>
-    </select><br><br>
-
-    <label for="pineapple">Would you eat pineapple on pizza?</label><br>
-    <label for="no">NO</label>
-    <input type="radio" value="no" name="radion">
-    <label for="Yes">Yes</label>
-    <input type="radio" value="yes" name="radioy"><br><br>
-
-    <label for="question">How can pizza improve?</label><br><br>
-    <input type="checkbox" value="cheese" name="cheese">
-    <label for="cheese2">More Cheese</label><br><br>
-    <input type="checkbox" value="sauce" name="sauce">
-    <label for="sauce2">More sauce</label><br><br>
-    <input type="checkbox" for="crispy" name="crispy">
-    <label for="crispy">Crispier</label><br><br>
-    <input type="checkbox" for="thin" name="thin">
-    <label for="thin">Thinner</label><br><br>
-    <input type="checkbox" for="thick" name="thick">
-    <label for="thick">Thicker</label><br><br>
-
-    <label for="textinput">Any other strong pizza opinions?</label><br>
-    <textarea id="texty" name="textinput" rows="4" cols="40"></textarea><br><br>
-    <input type="submit" id="submit" name="submit"><br><br>
-  </div>
-
-  </form>
+	<h1 id="title">The Very Important Pizza Survey</h1>
+	<p id="description">Please input your pizza opinions!</p>
+	<div id="form">
+		<form id="survey-form" name="survey-form">
+			<br>
+			<br>
+			<label for="name">Name</label> <input id="name" name="name" type="text"><br>
+			<br>
+			<label for="email">Email</label> <input name="email" type="text"><br>
+			<br>
+			Age (optional) <input name="age"><br>
+			<br>
+			<label for="dropdowm">How often do you eat pizza?</label> <select name="often">
+				<option value="daily">
+					Daily
+				</option>
+				<option value="weekly">
+					Weekly
+				</option>
+				<option value="monthly">
+					Monthly
+				</option>
+				<option value="yearly">
+					Yearly
+				</option>
+			</select><br>
+			<br>
+			<label for="pineapple">Would you eat pineapple on pizza?</label><br>
+			<label for="no">NO</label> <input name="radion" type="radio" value="no"> <label for="Yes">Yes</label> <input name="radioy" type="radio" value="yes"><br>
+			<br>
+			<label for="question">How can pizza improve?</label><br>
+			<br>
+			<input name="cheese" type="checkbox" value="cheese"> <label for="cheese2">More Cheese</label><br>
+			<br>
+			<input name="sauce" type="checkbox" value="sauce"> <label for="sauce2">More sauce</label><br>
+			<br>
+			<input name="crispy" type="checkbox"> <label for="crispy">Crispier</label><br>
+			<br>
+			<input name="thin" type="checkbox"> <label for="thin">Thinner</label><br>
+			<br>
+			<input name="thick" type="checkbox"> <label for="thick">Thicker</label><br>
+			<br>
+			<label for="textinput">Any other strong pizza opinions?</label><br>
+			<textarea cols="40" id="texty" name="textinput" rows="4"></textarea><br>
+			<br>
+			<input id="submit" name="submit" type="submit"><br>
+			<br>
+		</form>
+	</div>
 </body>
 </html>
